# sdk-hsm-thingy53

drivers/sensor/: Kconfig
samples/20_sensors_server/: app.overlay
samples/40_thread_gps/: CMakeLists.txt  app.overlay  prj.conf
samples/40_thread_gps/src/: main.cpp
samples/50_gps_accelerometre/: app.overlay  prj.conf
samples/60_backup_end/: app.overlay  thingy53_nrf5340_cpuapp.overlay
samples/61/: CMakeLists.txt
samples/61/build_app/: CMakeCache.txt  zephyr_settings.txt
samples/61/build_app/802154_rpmsg/: CMakeCache.txt  child_image_preload.cmake
samples/61/build_app/zephyr/: .cmake.dotconfig.checksum  .config  edt.pickle  zephyr.dts  zephyr.dts.pre
samples/61/build_app/zephyr/kconfig/: sources.txt
samples/TEST/: app.overlay  prj.conf
samples/TEST/60_backup_end/: app.overlay  prj.conf
samples/TEST/60_backup_end/src/: main.cpp
samples/imu_udp_thingy53/: CMakeLists.txt  prj.conf  thingy53.overlay
samples/imu_udp_thingy53/build_app/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  partitions.yml  pm.config
samples/imu_udp_thingy53/build_app/Kconfig/: Kconfig.shield
samples/imu_udp_thingy53/build_app/empty_net_core/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  shared_vars.cmake  zephyr_modules.txt
samples/imu_udp_thingy53/build_app/empty_net_core/b0n/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  shared_vars.cmake
samples/imu_udp_thingy53/build_app/empty_net_core/zephyr/: cmake_install.cmake  edt.pickle  runners.yaml  zephyr.dts.d
samples/imu_udp_thingy53/build_app/mcuboot/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  shared_vars.cmake
samples/imu_udp_thingy53/build_app/zephyr/: cmake_install.cmake  edt.pickle  runners.yaml  zephyr.dts.d  zephyr.dts.pre
samples/imu_udp_thingy53/src/: main.c
samples/samples/04_bme680/: CMakeLists.txt
samples/thingy53_sensor_hub-master/: CMakeLists.txt  prj.conf  recv_udp_sensor.py
samples/thingy53_sensor_hub-master/network/: network_sensor_json_fmt.h  thread_udp_sender.c  thread_udp_sender.h
samples/thingy53_sensor_hub-master/src/: main.c  src_sensor_udp_thread.c
subsys/app_imu/: app_imu.c  app_imu.h
subsys/app_led/: app_led.c
(+485 files in other folders)
